[package]
name = "labels"
version = "0.0.1"
authors = ["James Forster <james.forsterer@gmail.com>"]
edition = "2021"
description = """
This crate provides labels for functions to document their test
status:
tested, untested, parent_tested...
"""
documentation = "https://docs.rs/test_labels"
readme = "README.md"
homepage = "https://github.com/ripytide/test_labels"
repository = "https://github.com/ripytide/test_labels"
license = "AGPL-3.0-or-later"
keywords = ["labels"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["extra-traits"]}
